# ProCybernetica

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: BLUEPRINT_POSITIONING.md  BLUEPRINT_PROVENANCE.md  CAPTURE_STATUS.md  CORPUS_INDEX.md  INTEGRATION_MAP.md  ORIENTATION_FOR_ENGINEERS.md  PROGRAM_CAPTURE.md  PUBLICATION_BOUNDARY.md  PUBLICATION_MATRIX.md  ROADMAP.md  START_HERE.md
examples/: README.md
procyber/: README.md  __init__.py  cli.py  paths.py  schema_bundle.py  validate.py
profiles/: README.md  bt_semantic_profile.yaml  capability_radius_profile.yaml  concept_promotion_profile.yaml  controlplane_state_machine.yaml  dymaxion_service_metric_profile.yaml  entropy_accounting_profile.yaml  frequency_ledger_profile.yaml  k3_bridge_lifecycle.yaml  membrane_boundary_profile.yaml  projection_loss_profile.yaml  promotion_policy.example.yaml  source_confidence_profile.yaml
schemas/: README.md  artifact_envelope.schema.json  capability_descriptor.schema.json  claim.schema.json  command_envelope.schema.json  delegation_envelope.schema.json  evaluation_result.schema.json  event_envelope.schema.json  incident_report.schema.json  node_descriptor.schema.json  observation_envelope.schema.json  policy_envelope.schema.json  promotion_decision.schema.json  provenance_record.schema.json  replay_envelope.schema.json  status_envelope.schema.json  trace_event.schema.json  transition_record.schema.json
tests/: test_lawful_learning_toy.py  test_public_fixtures_validate.py  test_public_scoring_dashboard_shapes.py  test_schemas_are_valid.py
(+82 files in other folders)
